--- a/web_app/templates/print/scribe_list.html
+++ b/web_app/templates/print/scribe_list.html
@@ -33,48 +33,44 @@
     {% include 'print/_print_header.html' %}
 
     <main>
-        {% for cat, classes in grouped_runs.items()|sort %}
-            {% for cls, runs in classes.items()|sort %}
-                {% for run in runs %}
-                     <div class="run-container">
-                        <h4 class="mt-4 text-center">{{ run.name }}</h4>
-                        {# NEU: Platzhalter für Geräteanzahl hinzugefügt (Punkt 1.1) #}
-                        <p class="run-meta-info">
-                            Richter: {% set judge = judges|selectattr('id', 'equalto', run.richter_id)|first %}{{ judge.lastname if judge else '___' }} | 
-                            Parcourslänge: {{ run.laufdaten.parcours_laenge or '___' }}m | 
-                            Anz. Geräte: {{ run.laufdaten.anzahl_hindernisse or '___' }} <br>
-                            Standardzeit (SCT): {{ run.laufdaten.standardzeit_sct or '___' }}s | 
-                            Maximalzeit (MCT): {{ run.laufdaten.maximalzeit_mct or '___' }}s
-                        </p>
-                        <table class="table table-sm">
-                            <thead class="table-light">
-                                <tr>
-                                    <th style="width: 5%;">Start-Nr.</th>
-                                    <th style="width: 25%;">Hundeführer / Hund</th>
-                                    <th style="width: 10%;">Zeit</th>
-                                    <th style="width: 10%;">Fehler</th>
-                                    <th style="width: 10%;">Verw.</th>
-                                    <th style="width: 10%;">DIS/ABR</th>
-                                    <th style="width: 30%;">Notizen</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for entry in run.entries %}
-                                <tr>
-                                    <td>{{ entry.Startnummer }}</td>
-                                    <td><strong>{{ entry.Hundefuehrer }}</strong><br><small>{{ entry.Hundename }}</small></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                     </div>
-                {% endfor %}
-            {% endfor %}
+        {% for run in ordered_runs %}
+             <div class="run-container">
+                <h4 class="mt-4 text-center">{{ run.name }}</h4>
+                {# NEU: Platzhalter für Geräteanzahl hinzugefügt (Punkt 1.1) #}
+                <p class="run-meta-info">
+                    Richter: {% set judge = judges|selectattr('id', 'equalto', run.richter_id)|first %}{{ judge.lastname if judge else '___' }} | 
+                    Parcourslänge: {{ run.laufdaten.parcours_laenge or '___' }}m | 
+                    Anz. Geräte: {{ run.laufdaten.anzahl_hindernisse or '___' }} <br>
+                    Standardzeit (SCT): {{ run.laufdaten.standardzeit_sct or '___' }}s | 
+                    Maximalzeit (MCT): {{ run.laufdaten.maximalzeit_mct or '___' }}s
+                </p>
+                <table class="table table-sm">
+                    <thead class="table-light">
+                        <tr>
+                            <th style="width: 5%;">Start-Nr.</th>
+                            <th style="width: 25%;">Hundeführer / Hund</th>
+                            <th style="width: 10%;">Zeit</th>
+                            <th style="width: 10%;">Fehler</th>
+                            <th style="width: 10%;">Verw.</th>
+                            <th style="width: 10%;">DIS/ABR</th>
+                            <th style="width: 30%;">Notizen</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for entry in run.entries %}
+                        <tr>
+                            <td>{{ entry.Startnummer }}</td>
+                            <td><strong>{{ entry.Hundefuehrer }}</strong><br><small>{{ entry.Hundename }}</small></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+             </div>
         {% else %}
             <p style="text-align: center; font-weight: bold; margin-top: 2cm;">
                 Keine Läufe im Zeitplan gefunden.
