--- a/web_app/templates/plan_schedule.html
+++ b/web_app/templates/plan_schedule.html
@@ -8,7 +8,7 @@
       <div>
         <a class="btn btn-outline-secondary me-2" href="{{ url_for('events_bp.events_list') }}">Zurück</a>
         <div class="btn-group me-2" role="group">
-          <a class="btn btn-outline-primary" href="{{ url_for('print_bp.print_schedule', event_id=event.id) }}" target="_blank">Vorbereitungsdrucksachen</a>
+          <a class="btn btn-outline-primary" href="{{ url_for('print_bp.print_index', event_id=event.id) }}" target="_blank">Vorbereitungsdrucksachen</a>
           <button class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Weitere Drucke</span>
           </button>
